--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       display: block;
       margin: 1em 0 0.4em 0;
       background: var(--light);
-      border-radius: 1em;
+      border-radius: 3px;
       border: 2px solid var(--accent);
       box-shadow: 0 1px 8px #0002;
       max-width: 100%;
